💰 Fix pricing: $1 per product, not $1 for all
Every product. $1 each. Build your fleet, $1 at a time.
Want one? $1. Want all twelve? $12. Your call.

19 files updated. No more 'everything included' — pick what you need. 🧅⚓

--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>SERLF — Admiral Pair Dashboard</title>
-<meta name="description" content="Your SERLF dashboard. Admiral Pair + 13 products, 32+ Novel Patterns, $1/mo. EOSE × E&Y.">
+<meta name="description" content="Your SERLF dashboard. Admiral Pair + 13 products, 32+ Novel Patterns, $1/mo per product. EOSE × E&Y.">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
 <a href="/dashboard.html">Fleet Control</a>
 <a href="mailto:kewinjoffe@gmail.com">Contact</a>
 </div>
-<div class="footer-bottom">⚓🧭 SERLF · Admiral Fleet Control · EOSE × E&Y · 🇨🇦 · $1/mo for everything</div>
+<div class="footer-bottom">⚓🧭 SERLF · Admiral Fleet Control · EOSE × E&Y · 🇨🇦 · $1/mo per product</div>
 </div>
 </footer>
 
