--- a/com/index.html
+++ b/com/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>SERLF — Enterprise · EOSE × Ernst &amp; Young</title>
-<meta name="description" content="Enterprise AI sovereignty. EOSE × Ernst & Young joint delivery. Two principals: Kay J (human) + Admiral Pair (AI). $1 entry, custom consulting.">
+<meta name="description" content="Enterprise AI sovereignty. EOSE × Ernst & Young joint delivery. Two principals: Kay J (human) + Admiral Pair (AI). $1/product entry, custom consulting.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
 <h1>Enterprise advisory<br>meets sovereign AI.</h1>
 <p class="tagline" style="font-size:1.3rem;margin-top:1rem">Two principals. Human architect + AI fleet. EOSE × Ernst &amp; Young.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Start at $1/mo</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Start at $1/product</a>
 <a href="#consulting" class="btn btn-secondary">Enterprise Consulting</a>
 </div>
 </section>
@@ -105,12 +105,12 @@
 <section>
 <div class="container">
 <h2 class="section-title">Enterprise Pricing</h2>
-<p class="section-sub">Start at $1. Scale with consulting.</p>
+<p class="section-sub">$1/mo per product. Scale with consulting.</p>
 <div class="grid grid-2" style="max-width:800px;margin:0 auto">
 <div class="pricing-box">
 <h3 style="color:var(--fg);margin-bottom:1rem">Platform Access</h3>
 <div class="price">$1<span style="font-size:.3em;color:var(--fg2)">/mo</span></div>
-<p style="color:var(--fg2);margin-top:.5rem">All 12 products. Admiral Pair. 32+ NPs. Everything. No tiers.</p>
+<p style="color:var(--fg2);margin-top:.5rem">$1/mo per product. Pick what you need. Admiral Pair. 32+ NPs.</p>
 <a href="https://serlf.ca/login.html" class="btn btn-gold" style="width:100%;margin-top:1.5rem">Get Started</a>
 </div>
 <div class="pricing-box" style="border-color:var(--cyan)">
