--- a/crew.html
+++ b/crew.html
@@ -144,7 +144,7 @@ Not a single entity — a <strong>pair</strong>. Captain and m1 working as one h
 <div class="role">Product Nano — Strategy</div>
 <div class="silo">Fleet-wide</div>
 <div class="bio">Ideas and strategy. Token Swarm spec. Meek pricing model. Spec factories. Bob sees the product in the pattern.</div>
-<div class="nps">🐝 Token Swarm · 💰 $1 Pricing</div>
+<div class="nps">🐝 Token Swarm · 💰 $1/product Pricing</div>
 </div>
 <div class="crew-card">
 <span class="emoji">🧩</span>
@@ -224,10 +224,10 @@ Not a single entity — a <strong>pair</strong>. Captain and m1 working as one h
 <div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">3</span><span style="color:var(--fg2)">Silos</span></div>
 <div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">13+</span><span style="color:var(--fg2)">Agents</span></div>
 <div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">32+</span><span style="color:var(--fg2)">NPs</span></div>
-<div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">$1</span><span style="color:var(--fg2)">For All</span></div>
+<div><span style="font-size:2.5rem;font-weight:900;color:var(--gold);display:block">$1</span><span style="color:var(--fg2)">Per Product</span></div>
 </div>
 <div class="text-center mt-2">
-<a href="/" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="/" class="btn btn-gold">Start Building — $1/product</a>
 </div>
 </div>
 </section>
