--- a/dashboard.html
+++ b/dashboard.html
@@ -51,7 +51,7 @@ td{padding:.75rem;border-bottom:1px solid rgba(255,255,255,.03)}
 <div class="stat-grid">
 <div class="stat"><div class="value">8</div><div class="label">Domains Active</div></div>
 <div class="stat"><div class="value">6</div><div class="label">Products</div></div>
-<div class="stat"><div class="value">$1</div><div class="label">Price/mo</div></div>
+<div class="stat"><div class="value">$1</div><div class="label">Per Product/mo</div></div>
 <div class="stat"><div class="value">✓</div><div class="label">All Systems Go</div></div>
 </div>
 <h3 style="margin-bottom:1rem">System Status</h3>
@@ -128,7 +128,7 @@ td{padding:.75rem;border-bottom:1px solid rgba(255,255,255,.03)}
 
 <div class="tab-content" id="users">
 <h3 style="margin-bottom:1rem">User Management</h3>
-<p style="color:var(--fg2)">User registration launching with $1 payment integration.</p>
+<p style="color:var(--fg2)">User registration launching with $1/product payment integration.</p>
 </div>
 
 <div class="tab-content" id="logs">
