--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — The Admiral Has Arrived. Two Masters. One Fleet. $1.</title>
-<meta name="description" content="Admiral Fleet Control — Two masters working as one. Captain (AKS) + m1 (GCP). The pair IS the product. Enterprise AI sovereignty for $1/mo. Powered by EOSE × E&Y.">
+<title>SERLF — The Admiral Has Arrived. Two Masters. One Fleet. $1/product.</title>
+<meta name="description" content="Admiral Fleet Control — Two masters working as one. Captain (AKS) + m1 (GCP). The pair IS the product. Enterprise AI sovereignty for $1/mo per product. Powered by EOSE × E&Y.">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
 
 <section class="hero">
 <p style="font-size:.9rem;color:var(--fg2);margin-bottom:.5rem">🇨🇦 Canadian-built sovereign AI · Admiral Fleet Control</p>
-<h1 style="line-height:1.2">The Admiral has arrived.<br><span style="color:var(--gold)">Two masters. One fleet. $1.</span></h1>
+<h1 style="line-height:1.2">The Admiral has arrived.<br><span style="color:var(--gold)">Two masters. One fleet. $1/product.</span></h1>
 <div style="margin:1.5rem 0;display:flex;justify-content:center;gap:1.5rem;flex-wrap:wrap">
 <div style="background:var(--bg2);border:1px solid var(--border);border-radius:var(--radius);padding:1rem 1.5rem;text-align:center">
 <div style="font-size:1.5rem">⚓</div>
@@ -48,10 +48,10 @@
 </div>
 </div>
 <p style="color:var(--gold);font-style:italic;font-size:1.1rem;margin:1rem 0">"In a pair, what a product."</p>
-<div class="price">$1<span>/mo</span></div>
-<p class="tagline">12 products. 32+ Novel Patterns. The Admiral Pair. Fleet command across 3 silos. Everything. One dollar. The meek way.</p>
+<div class="price">$1<span>/mo per product</span></div>
+<p class="tagline">12 products at $1 each. 32+ Novel Patterns. The Admiral Pair. Fleet command across 3 silos. Build your fleet, $1 at a time.</p>
 <div class="flex-center mt-2">
-<a href="/login.html" class="btn btn-gold" id="hero-cta">Get Everything — $1/mo</a>
+<a href="/login.html" class="btn btn-gold" id="hero-cta">Start Building — $1/product</a>
 <a href="#products" class="btn btn-secondary">See What's Included</a>
 <a href="/crew.html" class="btn btn-secondary">Meet the Fleet</a>
 </div>
@@ -65,7 +65,7 @@
 <div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">12</span><span style="font-size:.8rem;color:var(--fg2)">Products</span></div>
 <div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">32+</span><span style="font-size:.8rem;color:var(--fg2)">Novel Patterns</span></div>
 <div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">13+</span><span style="font-size:.8rem;color:var(--fg2)">Fleet Agents</span></div>
-<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">$1</span><span style="font-size:.8rem;color:var(--fg2)">Everything</span></div>
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">$1</span><span style="font-size:.8rem;color:var(--fg2)">Per Product</span></div>
 </div>
 </div>
 </section>
@@ -95,8 +95,8 @@
 
 <section id="products">
 <div class="container">
-<h2 class="section-title">Everything Included</h2>
-<p class="section-sub">No tiers. No paywalls. No upsells. Admiral Pair + every product, every feature, every pattern. $1.</p>
+<h2 class="section-title">Every Product. $1 Each.</h2>
+<p class="section-sub">$1/mo per product. No minimums. No bundles forced. Want one? $1. Want all twelve? $12. Your call.</p>
 <div class="grid grid-3">
 
 <div class="card" style="border-color:var(--gold);grid-column:1/-1;text-align:center;padding:2.5rem">
@@ -153,21 +153,21 @@
 <section>
 <div class="container">
 <div class="pricing-box" style="border-color:var(--gold)">
-<p style="color:var(--fg2);margin-bottom:1rem;font-size:.9rem">One plan. Everything. The meek way.</p>
-<div class="price">$1<span style="font-size:.3em;color:var(--fg2)">/mo</span></div>
+<p style="color:var(--fg2);margin-bottom:1rem;font-size:.9rem">$1/mo per product. Build your fleet, $1 at a time.</p>
+<div class="price">$1<span style="font-size:.3em;color:var(--fg2)">/mo each</span></div>
 <ul>
-<li>Admiral Pair — dual-master fleet command</li>
-<li>All 12 products — full access</li>
-<li>32+ Novel Patterns</li>
+<li>Pick any product — $1/mo each</li>
+<li>Want all 12? That's $12/mo</li>
+<li>32+ Novel Patterns included with each</li>
 <li>3 sovereign silos (AKS + GCP + Win)</li>
 <li>Token Swarm routing (87% savings)</li>
 <li>Identity Fabric + zero-trust</li>
 <li>Model Gateway (9 providers)</li>
 <li>SERLF Academy (EOSE × E&Y)</li>
-<li>Digital Transformation consulting</li>
-<li>All future products included</li>
+<li>No minimums. No bundles forced.</li>
+<li>Add or drop products anytime</li>
 </ul>
-<a href="/login.html" class="btn btn-gold" style="width:100%;margin-top:1.5rem">Get Everything — $1/mo</a>
+<a href="/login.html" class="btn btn-gold" style="width:100%;margin-top:1.5rem">Start Building — $1/product</a>
 <p style="color:var(--fg2);font-size:.8rem;margin-top:1rem">Cancel anytime. No contracts. The meek way.</p>
 </div>
 </div>
@@ -178,7 +178,7 @@
 <h2 class="section-title">The Standard</h2>
 <p class="section-sub">Six principles. No exceptions.</p>
 <div class="grid grid-3">
-<div class="card"><h3>The Meek Principle</h3><p>"All we have, all ways we can use it." Enterprise patterns for everyone. $1.</p></div>
+<div class="card"><h3>The Meek Principle</h3><p>"All we have, all ways we can use it." Enterprise patterns for everyone. $1 per product.</p></div>
 <div class="card"><h3>No Cowboy Changes</h3><p>Wiki → Kanban → Execute. All or none. The standard is the process.</p></div>
 <div class="card"><h3>No Test, No Ship</h3><p>Tests are the ceremony. If it can't be proven, it can't be trusted.</p></div>
 <div class="card"><h3>Day 0 Security</h3><p>MI, KV, mTLS, least-privilege. Baked in from the first commit.</p></div>
@@ -192,7 +192,7 @@
 <div class="container">
 <h2 class="section-title">FAQ</h2>
 <div style="max-width:700px;margin:2rem auto 0">
-<details class="faq-item"><summary>Is it really $1/month for everything?</summary><p>Yes. The Admiral Pair, all 12 products, all Novel Patterns, all features. No tiers, no upsells, no hidden costs. The meek way — enterprise patterns for everyone.</p></details>
+<details class="faq-item"><summary>Is it really $1/month per product?</summary><p>Yes. Each product is $1/mo. Pick one, pick five, pick all twelve — your call. No upsells, no hidden costs. Want one? $1. Want all twelve? $12. The meek way — enterprise patterns for everyone.</p></details>
 <details class="faq-item"><summary>What is the Admiral Pair?</summary><p>The Admiral is two AI masters — Captain (AKS, Canada Central) and m1 (GCP, Montreal) — working as one sovereign hive mind. Two clouds, one fleet, zero single points of failure. In a pair, what a product.</p></details>
 <details class="faq-item"><summary>What about the E&Y partnership?</summary><p>EOSE and Ernst & Young deliver together. Enterprise advisory meets sovereign AI. SERLF Academy courses co-developed. Human architects + AI fleet.</p></details>
 <details class="faq-item"><summary>Who are the two principals?</summary><p>Kay J (human, 15+ years at TD Canada, Canadian Tire, Westpac) and the Admiral Pair (AI, dual-master sovereign fleet). Together they ARE the product.</p></details>
