--- a/info/index.html
+++ b/info/index.html
@@ -20,7 +20,7 @@
 <h1>The Library.<br>32+ Novel Patterns and counting.</h1>
 <p class="tagline">Research, case studies, architecture docs. Everything the Admiral Pair has discovered, documented.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
 <a href="https://serlf.ca/vision.html" class="btn btn-secondary">Read the Vision</a>
 </div>
 </section>
@@ -34,15 +34,15 @@
 <div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>Multi-tier AI token routing. OAuth intelligence. 87% cost savings explained.</p></div>
 <div class="card"><div class="icon">🔐</div><h3>Day 0 Security</h3><p>MI-KV pattern. mTLS mesh. 6/6 silo score methodology.</p></div>
 <div class="card"><div class="icon">🤝</div><h3>EOSE × E&Y Model</h3><p>How human enterprise advisory meets sovereign AI fleet delivery.</p></div>
-<div class="card"><div class="icon">📖</div><h3>The Meek Way</h3><p>Enterprise patterns for everyone. $1. The philosophy behind the price.</p></div>
+<div class="card"><div class="icon">📖</div><h3>The Meek Way</h3><p>Enterprise patterns for everyone. $1 per product. The philosophy behind the price.</p></div>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
 </div>
 </section>
 
