--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@ body{display:flex;align-items:center;justify-content:center;min-height:100vh;bac
 
 <div class="price-callout">
 <div class="amt">$1<span style="font-size:.4em;color:var(--fg2)">/mo</span></div>
-<p style="color:var(--fg2);font-size:.85rem;margin-top:.5rem">All 12 products. Everything included.<br>Sign in with Google to get started.</p>
+<p style="color:var(--fg2);font-size:.85rem;margin-top:.5rem">$1/mo per product. Pick what you need.<br>Sign in with Google to get started.</p>
 </div>
 
 <a href="/" class="back-link">← Back to serlf.ca</a>
