--- a/net/index.html
+++ b/net/index.html
@@ -26,7 +26,7 @@
 <h1>The Network.<br>Admiral Pair at the core.</h1>
 <p class="tagline">API endpoints, developer portal, integrations. Two masters powering the backbone. 3 silos: AKS + GCP + Win.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
 <a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
 </div>
 </section>
@@ -45,9 +45,9 @@
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">Admiral Pair. 12 products. 32+ Novel Patterns. All infrastructure included. The meek way.</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">Admiral Pair. 12 products at $1 each. 32+ Novel Patterns. Build your fleet, $1 at a time.</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
 </div>
 </section>
 
