--- a/org/index.html
+++ b/org/index.html
@@ -75,7 +75,7 @@
 <p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">32+ Novel Patterns. Admiral Pair architecture. Fleet command patterns. All open. All yours. The meek way.</p>
 <div class="flex-center">
 <a href="https://github.com/eose-sre/serlf" class="btn btn-gold">View on GitHub</a>
-<a href="https://serlf.ca/login.html" class="btn btn-secondary">Get Platform — $1/mo</a>
+<a href="https://serlf.ca/login.html" class="btn btn-secondary">Get Platform — $1/product</a>
 </div>
 </div>
 </section>
