--- a/portal-v2.html
+++ b/portal-v2.html
@@ -658,7 +658,7 @@ tr:hover td{background:var(--bg3)}
 <!-- ═══════════════ TAB 8: PRODUCTS & DOMAINS ═══════════════ -->
 <div class="tab-content" id="tab-products">
   <div class="section-header">
-    <div><h2>Products & Domains</h2><div class="subtitle">12 products · 28 domains · $1/mo for everything</div></div>
+    <div><h2>Products & Domains</h2><div class="subtitle">12 products · 28 domains · $1/mo per product</div></div>
     <div style="font-size:12px">Customer Zero: <strong style="color:var(--accent)">Kay J</strong> ⚓</div>
   </div>
 
@@ -681,7 +681,7 @@ tr:hover td{background:var(--bg3)}
     <div class="card">
       <h3>💳 Stripe</h3>
       <div style="margin-top:8px;font-size:13px;line-height:1.8">
-        <div>Price: <strong style="color:var(--green)">$1/mo for everything</strong> (NP-L1-021)</div>
+        <div>Price: <strong style="color:var(--green)">$1/mo per product</strong> (NP-L1-021)</div>
         <div>Payment Link: <a href="https://buy.stripe.com/fZufZbgo3cxr0Li9ZAgjC03" target="_blank">buy.stripe.com/...</a></div>
         <div>Billing Portal: <a href="https://billing.stripe.com/p/login/5kQ7v3c5L5pE5b2cMM" target="_blank">billing.stripe.com/...</a></div>
         <div style="margin-top:8px">Customers: <strong>1</strong> (Kay J — Customer Zero)</div>
