--- a/shop/index.html
+++ b/shop/index.html
@@ -20,7 +20,7 @@
 <h1>Wear the fleet.<br>⚓🧭 Admiral Pair gear.</h1>
 <p class="tagline">Hoodies, stickers, hardware kits. Rep the sovereign fleet. Canadian-made.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
 <a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
 </div>
 </section>
@@ -38,8 +38,8 @@
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
 </div>
 </section>
 
