--- a/stripe-checkout.html
+++ b/stripe-checkout.html
@@ -24,10 +24,10 @@ body{display:flex;align-items:center;justify-content:center;min-height:100vh;bac
 <div class="user-info" id="user-info"></div>
 
 <div class="price-hero">$1<span style="font-size:.3em;color:var(--fg2)">/mo</span></div>
-<p style="color:var(--fg2);font-size:.9rem">Everything. No tiers. No limits.</p>
+<p style="color:var(--fg2);font-size:.9rem">$1/mo per product. Pick what you need.</p>
 
 <ul class="included">
-<li>All 12 products — full access</li>
+<li>Each product — $1/mo</li>
 <li>30+ Novel Patterns</li>
 <li>Fleet Command + Token Swarm</li>
 <li>Model Gateway (9 providers)</li>
@@ -37,7 +37,7 @@ body{display:flex;align-items:center;justify-content:center;min-height:100vh;bac
 <li>Cancel anytime</li>
 </ul>
 
-<button class="pay-btn" onclick="SERLF_STRIPE.checkout()">Subscribe — $1/mo →</button>
+<button class="pay-btn" onclick="SERLF_STRIPE.checkout()">Subscribe — $1/mo per product →</button>
 <p style="color:var(--fg2);font-size:.75rem;margin-top:1rem">Secure checkout via Stripe. Cancel anytime.</p>
 
 <div style="margin-top:1.5rem;padding-top:1rem;border-top:1px solid rgba(255,255,255,.1)">
