--- a/vision.html
+++ b/vision.html
@@ -47,8 +47,8 @@
 <p class="section-sub">"All we have, all ways we can use it."</p>
 <div class="grid grid-2" style="max-width:800px;margin:0 auto">
 <div class="card">
-<h3>$1 for Everything</h3>
-<p>Enterprise patterns shouldn't cost enterprise money. 12 products, 32+ Novel Patterns, dual-master fleet command, SERLF Academy — all for one dollar a month. The standard is the floor, not a paywall.</p>
+<h3>$1 Per Product</h3>
+<p>Enterprise patterns shouldn't cost enterprise money. 12 products at $1/mo each. Pick what you need. Want one? $1. Want all twelve? $12. The standard is the floor, not a paywall.</p>
 </div>
 <div class="card">
 <h3>Weakness → Strength</h3>
@@ -99,8 +99,8 @@
 </div>
 <div class="timeline-item">
 <h4>February 15, 2026</h4>
-<h3>💰 $1 for Everything</h3>
-<p>Kill the tiers. Kill the paywalls. $1/mo for all 12 products, all patterns, all features. NP-L1-021: The $1 Disruption. The meek way wins.</p>
+<h3>💰 $1 Per Product</h3>
+<p>Kill the bloated bundles. Kill the paywalls. $1/mo per product. Pick what you need. NP-L1-021: The $1 Disruption. The meek way wins.</p>
 </div>
 <div class="timeline-item">
 <h4>February 15, 2026</h4>
@@ -218,9 +218,9 @@
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
 <p style="font-size:2rem;font-weight:800;margin-bottom:1rem">Become the enterprise.</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">Admiral Pair. 12 products. 32+ Novel Patterns. 3 silos. EOSE × E&Y. All for $1/mo. The meek way.</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">Admiral Pair. 12 products at $1 each. 32+ Novel Patterns. 3 silos. EOSE × E&Y. Build your fleet, $1 at a time.</p>
 <div class="flex-center">
-<a href="/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="/login.html" class="btn btn-gold">Start Building — $1/product</a>
 <a href="/crew.html" class="btn btn-secondary">Meet the Fleet</a>
 </div>
 </div>
