--- a/welcome.html
+++ b/welcome.html
@@ -20,9 +20,9 @@ body{display:flex;align-items:center;justify-content:center;min-height:100vh;bac
 <div class="success-icon">✓</div>
 <div class="logo" style="font-size:2rem;font-weight:700;color:var(--cyan)">SERLF<span style="color:var(--maple)">🍁</span></div>
 <h1 class="welcome-title">Welcome to the fleet.</h1>
-<p style="color:var(--fg2)">You're in. Everything's yours.</p>
+<p style="color:var(--fg2)">You're in. Build your fleet, $1 at a time.</p>
 
-<div class="payment-ok">🎉 Payment successful! Your $1/mo subscription is active.</div>
+<div class="payment-ok">🎉 Payment successful! Your subscription is active. $1/mo per product.</div>
 
 <div class="what-you-got">
 <div class="item"><strong>🔐 Silo-as-a-Service</strong>Day 0 security, 6/6 score</div>
