--- a/club/index.html
+++ b/club/index.html
@@ -20,7 +20,7 @@
 <h1>Join the fleet.<br>The Admiral Pair welcomes you.</h1>
 <p class="tagline">Alumni network, cohort spaces, mentorship. Where graduates become captains and captains become admirals.</p>
 <div class="flex-center mt-2">
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Start Building — $1/product</a>
 <a href="https://serlf.ca/crew.html" class="btn btn-secondary">Meet the Crew</a>
 </div>
 </section>
@@ -38,8 +38,8 @@
 
 <section style="background:var(--bg2)">
 <div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
-<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo per product</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/product</a>
 </div>
 </section>
 
