🏆 Gamification — Gotta Catch 'Em All
Leaderboard, Collection, Profile — the meek compete.

- leaderboard.html: 7 categories, Meek Score, 20 users, animated ranks
- collect.html: 12 products as collectibles, rarity tiers, holographic legendaries
- profile.html: radar chart, streaks, achievements, capability map
- app.js: SERLF_GAME system, localStorage tracking, 3 new SPA routes
- Portal v2 Tab 12: 🏆 Community leaderboard

Achievement tiers: Starter → Builder → Fleet Captain → Admiral → The Meek
Meek Score = (Products×10) + (NPs×25) + (Courses×15) + (Helps×20) + (Streak×5)

The meekest shall inherit the leaderboard. 🧅⚓

--- a/app.html
+++ b/app.html
@@ -16,6 +16,9 @@
 <a href="#/crew" class="nav-link" data-page="crew">Crew</a>
 <a href="#/academy" class="nav-link" data-page="academy">Academy</a>
 <a href="#/status" class="nav-link" data-page="status">Status</a>
+<a href="#/leaderboard" class="nav-link" data-page="leaderboard">🏆 Leaderboard</a>
+<a href="#/collection" class="nav-link" data-page="collection">📦 Collection</a>
+<a href="#/profile" class="nav-link" data-page="profile">👤 Profile</a>
 <a href="/dashboard.html" class="nav-link">Fleet Control</a>
 <a href="#/account" class="nav-link" data-page="account" id="nav-account">Account</a>
 </nav>
